ocp-virt/overlays/dev/patches/keycloak-route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
spec:
  host: keycloak-dev.apps.cluster-wmpjb.dynamic.redhatworkshops.io
